<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".AddProductFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:background="@color/white"
            app:titleTextColor="@color/black"
            android:alpha="0.8"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/toolBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtCamera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/photo"
                android:textSize="16sp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/productImageCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                app:cardCornerRadius="10dp"
                app:cardElevation="40dp"
                android:elevation="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp">
                <ImageView
                    android:id="@+id/productCameraImage"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:background="@color/white_variation"
                    android:src="@drawable/ic_add_circle_24"
                    android:scaleType="centerCrop"
                    />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/txt_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/label"
                android:layout_marginTop="20dp" />

            <EditText
                android:id="@+id/brand_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:paddingStart="10dp"
                android:paddingEnd="8dp"
                android:inputType="textAutoComplete"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:hint="@string/item_name_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtCamera" />

            <TextView
                android:id="@+id/txt_barcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/barcode_no"
                android:layout_marginTop="20dp" />

            <EditText
                android:id="@+id/product_barCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:paddingStart="10dp"
                android:paddingEnd="8dp"
                android:inputType="textCapCharacters"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:hint="@string/barcode_no_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtCamera" />

            <TextView
                android:id="@+id/txt_ethicalScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/ethyscore"
                android:layout_marginTop="20dp" />

            <EditText
                android:id="@+id/product_ethyScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:paddingStart="10dp"
                android:paddingEnd="8dp"
                android:inputType="number"
                android:maxLines="1"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:hint="@string/ethical_score_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtCamera" />

            <TextView
                android:id="@+id/txt_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/description"
                android:layout_marginTop="20dp" />

            <EditText
                android:id="@+id/product_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:paddingStart="10dp"
                android:paddingEnd="8dp"
                android:inputType="textMultiLine"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:hint="@string/description_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtCamera" />

            <TextView
                android:id="@+id/txt_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/type_of_item_hint"
                android:layout_marginTop="20dp" />

            <Spinner
                android:id="@+id/productSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/submitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/add_product_btn_txt"
                android:textAllCaps="false"
                android:backgroundTint="@color/blue_wave"
                android:layout_marginTop="30dp"/>




        </LinearLayout>






        <!--        <EditText-->
<!--            android:id="@+id/brand_name"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="8dp"-->
<!--            android:layout_marginEnd="10dp"-->
<!--            android:layout_marginStart="10dp"-->
<!--            android:layout_marginBottom="8dp"-->
<!--            android:hint="brand"-->
<!--            android:paddingStart="8dp"-->
<!--            android:paddingEnd="8dp"-->
<!--            app:layout_constraintEnd_toEndOf="@id/product_name"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@id/product_name" />-->

<!--        <EditText-->
<!--            android:id="@+id/product_ethyScore"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="8dp"-->
<!--            android:layout_marginBottom="8dp"-->
<!--            android:layout_marginStart="10dp"-->
<!--            android:hint="EthyScore"-->
<!--            android:paddingStart="8dp"-->
<!--            android:paddingEnd="8dp"-->
<!--            android:layout_marginEnd="10dp"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@id/brand_name" />-->

<!--        <EditText-->
<!--            android:id="@+id/product_barCode"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="8dp"-->
<!--            android:paddingStart="8dp"-->
<!--            android:paddingEnd="8dp"-->
<!--            android:layout_marginBottom="8dp"-->
<!--            android:hint="Barcode No"-->
<!--            app:layout_constraintEnd_toEndOf="@id/brand_name"-->
<!--            app:layout_constraintStart_toStartOf="@id/brand_name"-->
<!--            app:layout_constraintTop_toBottomOf="@id/product_ethyScore" />-->

<!--        <EditText-->
<!--            android:id="@+id/product_description"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="8dp"-->
<!--            android:paddingStart="8dp"-->
<!--            android:paddingEnd="8dp"-->
<!--            android:inputType="textMultiLine"-->
<!--            android:layout_marginBottom="8dp"-->
<!--            android:hint="Description"-->
<!--            app:layout_constraintEnd_toEndOf="@id/product_ethyScore"-->
<!--            app:layout_constraintStart_toStartOf="@id/product_ethyScore"-->
<!--            app:layout_constraintTop_toBottomOf="@id/product_barCode" />-->

<!--        <Button-->
<!--            android:id="@+id/submitButton"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="30dp"-->
<!--            android:text="Send Product"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@id/product_description" />-->


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
</layout>