<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/view_container"
                android:layout_width="match_parent"
                android:layout_height="270dp"
                android:weightSum="1"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <FrameLayout
                    android:id="@+id/txt_container"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".7"
                    android:background="@color/blue_wave">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/textConstraint"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            style="@style/TextAppearance.MdcTypographyStyles.Headline6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="35dp"
                            android:text="@string/already_have_an_naccount"
                            android:textColor="@color/white"
                            android:textSize="38sp"
                            android:lineSpacingMultiplier="1.1"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.65" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </FrameLayout>

                <View
                    android:id="@+id/wave_container"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".3"
                    android:background="@drawable/ic_wave"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txt_container" />

            </LinearLayout>


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.91" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.09" />

            <LinearLayout
                android:id="@+id/signIn_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/view_container"
                app:layout_constraintStart_toStartOf="@id/guideline5"
                app:layout_constraintEnd_toEndOf="@id/guideline4">



                <EditText
                    android:id="@+id/email_loginEditText"
                    android:layout_width="match_parent"
                    android:padding="16dp"
                    android:drawablePadding="16dp"
                    android:hint="@string/email_hint"
                    android:drawableStart="@drawable/ic_email_24"
                    android:background="@drawable/edittext_bg"
                    android:layout_height="wrap_content">

                </EditText>




                <EditText
                    android:id="@+id/psw_loginEditText"
                    android:layout_width="match_parent"
                    android:background="@drawable/edittext_bg"
                    android:padding="16dp"
                    android:layout_marginTop="10dp"
                    android:drawableStart="@drawable/ic_lock_open_24"
                    android:drawablePadding="16dp"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:layout_height="match_parent">

                </EditText>




            </LinearLayout>

            <LinearLayout
                android:id="@+id/button_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                app:layout_constraintEnd_toEndOf="@id/guideline4"
                app:layout_constraintTop_toBottomOf="@id/signIn_layout"
                app:layout_constraintStart_toStartOf="@id/guideline5"
                android:orientation="vertical">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/Login_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="@id/signUpButton"
                    app:layout_constraintStart_toStartOf="@id/signUpButton"
                    app:layout_constraintBottom_toTopOf="@id/or_layout"
                    android:layout_marginBottom="8dp"
                    android:textColor="@color/white"
                    android:text="Login"
                    android:textAllCaps="false"
                    android:backgroundTint="@color/blue_wave" />

                <LinearLayout
                    android:id="@+id/or_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1"
                    app:layout_constraintBottom_toTopOf="@id/signUpButton"
                    app:layout_constraintStart_toStartOf="@id/guideline5"
                    app:layout_constraintEnd_toEndOf="@id/guideline4"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight=".45"
                        android:layout_gravity="center_vertical"
                        android:background="@color/black"
                        android:alpha="0.4" />

                    <RelativeLayout
                        android:layout_weight=".1"
                        android:layout_width="8dp"
                        android:layout_height="wrap_content">

                        <TextView

                            android:layout_gravity="center_horizontal"
                            android:layout_width="wrap_content"
                            android:textAlignment="center"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentStart="true"
                            android:layout_height="wrap_content"
                            android:text="or" />
                    </RelativeLayout>

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight=".45"
                        android:layout_gravity="center_vertical"
                        android:background="@color/black"
                        android:alpha="0.5" />


                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/signUpButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    app:strokeColor="@color/blue_wave"
                    android:textAllCaps="false"
                    style="?attr/materialButtonOutlinedStyle"
                    android:padding="10dp"
                    app:strokeWidth="1dp"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/blue_wave"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/guideline4"
                    app:layout_constraintStart_toStartOf="@id/guideline5"
                    android:layout_marginBottom="30dp" />

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>